@@ -21,7 +21,7 @@ WeaponData
 	"weight"			"8"
 	"item_flags"			"69"
 
-	"damage"			"50"
+	"damage"			"25"
 
 	// Sounds for the weapon. There is a max of 16 sounds per category (i.e. max 16 "single_shot" sounds)
 	SoundData
