@@ -45,9 +45,9 @@ private:
 	CPanelAnimationVar( Color, m_TextColor, "TextColor", "FgColor" );
 	CPanelAnimationVar( Color, m_FlashColor, "SecondaryColor", "FgColor" );
 
-	CPanelAnimationVar( vgui::HFont, m_hNumberFont, "NumberFont", "HudNumbers" );
-	CPanelAnimationVar( vgui::HFont, m_hNumberGlowFont, "NumberGlowFont", "HudNumbersGlow" );
-	CPanelAnimationVar( vgui::HFont, m_hSmallNumberFont, "SmallNumberFont", "HudNumbersSmall" );
+	CPanelAnimationVar(vgui::HFont, m_hNumberFont, "NumberFont", "HudNumbersTimer");
+	CPanelAnimationVar(vgui::HFont, m_hNumberGlowFont, "NumberGlowFont", "HudNumbersGlowTimer");
+	CPanelAnimationVar(vgui::HFont, m_hSmallNumberFont, "SmallNumberFont", "HudNumbersSmallTimer");
 	CPanelAnimationVar( vgui::HFont, m_hTextFont, "TextFont", "Default" );
 
 	CPanelAnimationVarAliasType( float, text_xpos, "text_xpos", "8", "proportional_float" );
